# sam-3d-objects

./: .dockerignore  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt
api/: bg_remove.py  main.py  models.py  storage.py  stream_service.py  worker.py
doc/: setup.md
notebook/: demo_3db_mesh_alignment.ipynb  demo_multi_object.ipynb  demo_single_object.ipynb  inference.py
sam3d_objects/model/backbone/tdfy_dit/renderers/: gaussian_render.py
sam3d_objects/model/backbone/tdfy_dit/utils/: postprocessing_utils.py  render_utils.py
sam3d_objects/pipeline/: inference_pipeline.py  inference_pipeline_pointmap.py  inference_utils.py  layout_post_optimization_utils.py
scripts/: ensure_sam3d_checkpoints.sh  ensure_sam_checkpoint.sh  entrypoint.sh
