[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam3d_objects"
version = "0.0.1"
requires-python = ">=3.11,<3.12"

dependencies = [
  # --------------------
  # Core ABI constraints
  # --------------------
  "numpy==1.26.4",

  # --------------------
  # Project dependencies
  # --------------------
  "MoGe @ git+https://github.com/microsoft/MoGe.git@a8c37341bc0325ca99b9d57981cc3bb2bd3e255b",
  "easydict==1.13",
  "einops-exts==0.0.4",
  "hydra-core==1.3.2",
  "hydra-submitit-launcher==1.2.0",
  "igraph==0.11.8",
  "lightning==2.3.3",
  "loguru==0.7.2",

  # REQUIRED by utils3d.torch.RastContext(backend="cuda")
  "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git@253ac4fcea7de5f396371124af597e6cc957bfae",

  # USD export (pxr)
  "usd-core==25.11",

  # --------------------
  # Geometry / vision
  # --------------------
  "open3d==0.18.0",
  "pillow==10.4.0",
  "pymeshfix==0.17.0",
  "scikit-image==0.23.1",
  "segment-anything==1.0",
  "xatlas==0.0.9",

  # OpenCV pinned to NumPy 1.x–compatible build
  "opencv-python==4.9.0.80",

  # --------------------
  # Torch + CUDA stack
  # --------------------
  "torch==2.8.0+cu129",
  "torchvision==0.23.0+cu129",
  "torchaudio==2.8.0+cu129",
  "timm==0.9.16",

  # CUDA extensions (binary wheels)
  "spconv-cu121==2.3.8",
  "flash_attn==2.8.3",

  # CUDA extensions (built from source in Docker)
  "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git@2323de5905d5e90e035f792fe65bad0fedd413e7",
  "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@75ebeeaea0908c5527e7b1e305fbc7681382db47",

  # --------------------
  # UI / tooling
  # --------------------
  "tensorboard==2.16.2",
  "gradio==5.49.0",
  "seaborn==0.13.2",
  "pytest",
  "optree==0.14.1",

  # --------------------
  # API
  # --------------------
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "python-multipart==0.0.20",
]

[tool.hatch.build]
ignore-vcs = true
include = ["**/*.py"]
exclude = ["conftest.py", "*_test.py"]
packages = ["sam3d_objects"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
extra-index-url = [
  "https://pypi.ngc.nvidia.com",
  "https://download.pytorch.org/whl/cu129",
]

# Needed for some NVIDIA / PyTorch ecosystem wheels
find-links = [
  "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.8.0_cu129.html",
]

# You *want* this for CUDA-heavy stacks
index-strategy = "unsafe-best-match"

[tool.uv.extra-build-dependencies]
flash-attn  = ["torch==2.8.0+cu129", "numpy==1.26.4"]
gsplat      = ["torch==2.8.0+cu129", "numpy==1.26.4"]
pytorch3d   = ["torch==2.8.0+cu129", "numpy==1.26.4"]
nvdiffrast  = ["torch==2.8.0+cu129", "numpy==1.26.4"]
